props/specimens/ducktape/2026-05-20-00/code/cluster/k8s/website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: website
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: "auto"
