props/specimens/ducktape/2026-05-20-00/code/cluster/k8s/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  selector:
    app.kubernetes.io/name: website
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
