props/specimens/ducktape/2026-05-20-00/code/cluster/k8s/website/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website
  namespace: website
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "www.allegedly.works"
    - "allegedly.works"
  rules:
    - backendRefs:
        - name: website
          port: 80
